# xue_hua_audio

./: CHANGELOG.md  README.md  README.zh-CN.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: playback_test.dart  recording_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: audio_samples.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xue_hua_audio.podspec  xue_hua_audio_player.podspec
lib/: xue_hua_audio.dart
lib/src/: xue_hua_audio.dart
lib/src/rust/: engine.dart  error.dart  error.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  playback.dart  recording.dart  recording.freezed.dart  track.dart
linux/: CMakeLists.txt
macos/: xue_hua_audio.podspec  xue_hua_audio_player.podspec
rust/: Cargo.toml  build.rs
rust/src/: android_init.rs  engine.rs  error.rs  frb_generated.rs  lib.rs  playback.rs  recording.rs  track.rs
windows/: CMakeLists.txt
(+4 files in other folders)
