[package]
name = "xue_hua_audio_player"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "recording",
  "wav_output",
  "wav",
  "mp3",
  "flac",
  "vorbis",
  "mp4",
] }
hound = "3.5"
thiserror = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
