[package]
name = "xue_hua_audio"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rodio = { version = "0.22.2", default-features = false, features = [
    "playback",
    "recording",
    "wav_output",
    "wav",
    "mp3",
    "flac",
    "vorbis",
    "mp4",
] }
hound = "3.5.1"
thiserror = "2.0.18"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
